# ec_weather_simple

./: Cargo.toml  README.md
src/: main.rs
