[package]
name = "ec_weather_simple"
version = "0.1.0"
edition = "2021"
authors = ["Massimo Fasciano <massimo@mafalitic.com>"]
description = "Get current weather conditions from Environment Canada"

[dependencies]
quickxml_to_serde = { version = "0.5.0", optional = true }
reqwest = { version = "0.11.16", features = ["blocking"] }
simple-xml = { version = "0.1.10", optional = true }

[target.armv7-unknown-linux-gnueabihf.dependencies]
openssl = { version = "*", features = ["vendored"] }

[features]
#default = ["simple-xml"]
default = ["quickxml_to_serde"]
